{
    "name": "MainControls",
    "maps": [
        {
            "name": "Player",
            "id": "f34d1b3b-c1f7-4c31-a5d7-e94a2d1ad3f7",
            "actions": [
                {
                    "name": "LeftMove",
                    "type": "Button",
                    "id": "15b18ece-79ea-4be0-a53b-1575a1182eec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightMove",
                    "type": "Button",
                    "id": "077cd403-1574-4907-b73d-cd2ab6bec6b3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ForwardMove",
                    "type": "Button",
                    "id": "7ecb8803-bf4c-44bd-883a-eb0f7bd3e48d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BackMove",
                    "type": "Button",
                    "id": "9a506e93-a256-43c3-bf79-7a4405f0934d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "921703ff-96e7-40bf-9775-e1e42da2d957",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeWeaponUp",
                    "type": "Button",
                    "id": "00408137-2860-4772-85b0-eb54a7ba6272",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeWeaponDown",
                    "type": "Button",
                    "id": "5d1d092c-bb39-4dff-9290-f753596df7de",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b47ee3d9-0606-466a-800e-14f60a3184bb",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "82284883-5ec1-45b6-ac58-13dc81f7d1d3",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97dc0525-d563-4f53-a112-ef525d6957ab",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "465c5f70-fc0d-4777-90b5-d93cc0069106",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BackMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e51c4e6-f600-4419-8e8c-6541e305a10e",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "afda12eb-74f3-47fd-af5a-938a761f6242",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeWeaponUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cadacc4d-4da9-4238-a65d-b3196fc695b9",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeWeaponDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}